--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+		"preview": "vite preview"
 	},
 	"browserslist": {
 		"production": [
@@ -36,8 +34,5 @@
 		"react-syntax-highlighter": "^12.2.1",
 		"styled-components": "^5.0.0",
 		"vite": "^6.2.0"
-	},
-	"devDependencies": {
-		"gh-pages": "^6.3.0"
 	}
 }
